# LifeAI

./: .gitignore  Readme.md  docker-compose-dev.yml  docker-compose-prod.yml
platform-api-python/: Dockerfile.dev  Dockerfile.prod  LifeAgent.py  inference.py  main.py  pyproject.toml
platform-api-python/db/: chroma.sqlite3
platform-api-python/routes/: ask_route.py
platform-api-python/utils/: b2_storage.py
platform-api-ts/: Dockerfile.dev  Dockerfile.prod  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
platform-api-ts/prisma/: schema.prisma
platform-api-ts/prisma/migrations/20250725112542_init/: migration.sql
platform-api-ts/prisma/migrations/20250726011431_init_db/: migration.sql
platform-api-ts/prisma/migrations/20250726060145_change_in_document_model_due_to_backblazeb2/: migration.sql
platform-api-ts/src/: api.http  index.ts
platform-api-ts/src/config/: backblaze.config.ts  config.ts  multer.config.ts  passport.config.ts
platform-api-ts/src/controllers/: document.controller.ts
platform-api-ts/src/middlewares/: auth.middleware.ts
platform-api-ts/src/routes/: auth.routes.ts  document.routes.ts
platform-api-ts/src/types/: express.d.ts
platform-webapp/: .dockerignore  Dockerfile.dev  Dockerfile.prod  package.json
